@@ -3,6 +3,7 @@ Revision history for Locale-Codes-Country-FR
 0.02
 	Use gtar to create a distribution on Macs
 	Use Test::DescribeMe to simplify tests
+	Calling new on an object now returns a clone rather than setting the defaults in the new object
 
 0.01    Thu Sep 12 21:30:46 EDT 2019
         First draft - POC
